updated styling and added film description element

--- a/src/components/container.css
+++ b/src/components/container.css
@@ -12,7 +12,8 @@ body {
     font-feature-settings: "pnum", "lnum", "cpsp";
     height: 100%;
     width: 100%;
-	margin: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 ::selection {
