--- a/src/components/container.css
+++ b/src/components/container.css
@@ -16,6 +16,10 @@ body {
     box-sizing: border-box;
 }
 
+* {
+	box-sizing: border-box;
+}
+
 /* ::selection {
     color: red;
     background: yellow;
