added styles for react player

--- a/src/components/container.css
+++ b/src/components/container.css
@@ -59,3 +59,12 @@ header {
 	margin-left: 22px;
 	cursor: pointer;
 }
+
+/* PLAY TRAILER */
+
+.react-player {
+	position: absolute;
+	top: 0;
+	z-index: 0;
+	background: #0f0f0f;
+}
