updated typewriter package

--- a/src/components/container.css
+++ b/src/components/container.css
@@ -74,6 +74,10 @@ p {
 
 /* Overwrite React Typist style */
 
-.about-react-typist .lfm__typing_effect_text {
+.Typewriter {
+	display: inline-block;
+}
+
+.Typewriter .Typewriter__wrapper {
 	text-decoration: underline;
 }
